[package]
name = "nv_getter"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
dirs = "2.0"
log = { version = "0.4", default-features = true, features = ["std"] }
flexi_logger = "0.13"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
reqwest = "0.9"
indicatif = "0.12"
md5 = "0.6"
